refactor(biografia):modifique redirecciones

--- a/assets/pages/biografia.html
+++ b/assets/pages/biografia.html
@@ -29,10 +29,10 @@
                         <a class="nav-link active" aria-current="page" href="../../index.html">MARCO BOLAÑOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/assets/pages/biografia.html">BIOGRAFIA</a>
+                        <a class="nav-link" href="../pages/biografia.html">BIOGRAFIA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/assets/pages/kinal.html">KINAL REWORK</a>
+                        <a class="nav-link" href="../pages/kinal.html">KINAL REWORK</a>
                     </li>
                 </ul>
             </div>
