refactor(biografia/kinal/donaciones):multiples modificaciones

--- a/assets/pages/kinal.html
+++ b/assets/pages/kinal.html
@@ -269,9 +269,10 @@
                             <label for="">Mensaje</label>
                         </div>
                         <input type="text">
+
                     </div>
                     <div class="col-sm-4">
-                        <img src="../resources/imagenes/LogoKinalpeque.png style="width: 100%;">
+                        <img src="../resources/imagenes/LogoKinalpeque.png" style="width: 100%;">
                     </div>
                     <div class="col-sm-4">
                         <p>
