--- a/assets/pages/donaciones.html
+++ b/assets/pages/donaciones.html
@@ -44,7 +44,7 @@
 
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <h2>Formulario de Tarjeta para donacion</h2>
+            <h2>Formulario para donacion</h2>
             <label for="">Nombre de la tarjeta</label>
             <input type="text">
             <label for="">No de tarjeta</label>
@@ -71,7 +71,6 @@
             <input type="number" name="" id="">
         </div>
     </div>
-
     <script src="../scripts/kinal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
