--- a/assets/pages/kinal.html
+++ b/assets/pages/kinal.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="../pages/quienessomos.html">QUIENES SOMOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.facebook.com/kinal.gt">TRABAJOS</a>
+                        <a class="nav-link" href="https://www.kinal.org.gt/trabajo">TRABAJOS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" onclick="irAIndex()">SALIR</a>
@@ -288,6 +288,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <footer>
+            <p>&copy; MARCO | TODOS LOS DERECHOS RESERVADOS</p>
+        </footer>
 </body>
-
 </html>
