refactor(donaciones):modificaciones pagina de donaciones

--- a/assets/pages/donaciones.html
+++ b/assets/pages/donaciones.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="../pages/quienessomos.html">QUIENES SOMOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.facebook.com/kinal.gt">CHAMBAS</a>
+                        <a class="nav-link" href="https://www.kinal.org.gt/trabajo">CHAMBAS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.kinal.org.gt/blog">BLOG</a>
