--- a/assets/pages/biografia.html
+++ b/assets/pages/biografia.html
@@ -117,9 +117,8 @@
     </div>
 
     <div class=" container p-3" style="text-align: center;">
-        <button onclick="rABiografia()">REGRESAR</button>
+        <button onclick="irABiografia()">REGRESAR</button>
     </div>
-
     <div class="container mt-5 p-3">
         <div class="row justify-content-center">
             <div class="col-md-6">
