refactor(kinal):se hicieron modificaciones

--- a/assets/pages/kinal.html
+++ b/assets/pages/kinal.html
@@ -254,7 +254,6 @@
             </div>
         </div>
     </div>
-
     <footer>
         <div class="container d-flex justify-content-between">
             <div class="container">
@@ -269,7 +268,6 @@
                             <label for="">Mensaje</label>
                         </div>
                         <input type="text">
-
                     </div>
                     <div class="col-sm-4">
                         <img src="../resources/imagenes/LogoKinalpeque.png" style="width: 100%;">
@@ -289,7 +287,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
         <footer>
-            <p>&copy; MARCO | TODOS LOS DERECHOS RESERVADOS</p>
+            <p>&copy; MARCO |2025 TODOS LOS DERECHOS RESERVADOS</p>
         </footer>
 </body>
 </html>
