--- a/assets/pages/kinal.html
+++ b/assets/pages/kinal.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="https://www.kinal.org.gt/trabajo">TRABAJOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="irAIndex()">SALIR</a>
+                        <a class="nav-link" onclick="irAKinal()">SALIR</a>
                     </li>
                 </ul>
             </div>
