--- a/assets/pages/kinal.html
+++ b/assets/pages/kinal.html
@@ -68,7 +68,9 @@
                 <div class="">
                     <div class="card-body">
                         <div style="text-align: center;">
+                            <a href="https://www.kinal.org.gt/ciclobasico">
                             <img src="../resources/imagenes/basicos.png" style="width: 50%; border-radius: 5%;">
+                        </a>
                         </div>
                         <h5 class="card-title" style="background-color: #8D1C3A; color: #ffff;">Ciclo Básico | 11-15
                             años</h5>
@@ -83,7 +85,9 @@
                 <div class="">
                     <div class="card-body">
                         <div style="text-align: center;">
+                            <a href="https://www.kinal.org.gt/diversificado">
                             <img src="../resources/imagenes/Diver.png" style="width: 50%; border-radius: 5%;">
+                        </a>
                         </div>
                         <h5 class="card-title" style="background-color: #1C2D5E; color: #ffff;">Diversificado | 15-18
                             años</h5>
@@ -99,7 +103,9 @@
                 <div class="">
                     <div class="card-body">
                         <div style="text-align: center;">
+                            <a href="https://www.kinal.org.gt/ets">
                             <img src="../resources/imagenes/tecnicoSuper.png" style="width: 50%; border-radius: 5%;">
+                        </a>
                         </div>
                         <h5 class="card-title" style="background-color: #FEB319; color: #ffff;">Escuela Técnica |
                             Adultos</h5>
