comentario del rework de kinal que finaliza el proyecto

--- a/index.html
+++ b/index.html
@@ -139,5 +139,8 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 </body>
-
+        //COMENTARIO REDISEÑO PAGINA KINAL
+        //MI REDISEÑO SE BASA EN CONTENER TODA LA INFORMACION DE LA PAGINA ORIGINAL OMITIENOO COSAS
+        //QUE PARA MI NO SON NECESARIAS CON MUCHO MENOS Y CON MAS ORGANIZACION LO ENCUENTRAS TODO
+        //ES POR ESTO QUE MI PAGINA ES MEJOR QUE EL KINAL ORIGINAL.
 </html>
